fixed spacing

--- a/JS_midterm/style.css
+++ b/JS_midterm/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     display: flex;
     flex-direction: column; 
     justify-content: center;
@@ -18,6 +18,7 @@ body {
     background-color: #fff;
     border: 2px solid #000;
     overflow: hidden;
+    margin-bottom: -10px;
 }
 
 .score {
